[gd_scene load_steps=7 format=2]

[ext_resource path="res://Oswald-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.074
anchor_right = 0.5
anchor_bottom = 0.074
margin_left = -8.0
margin_top = -27.28
margin_right = 12.0
margin_bottom = 27.72
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = -37.0
margin_right = 88.5
margin_bottom = 37.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Salve-se "

[node name="Creditos" type="Label" parent="."]
anchor_left = 0.227
anchor_top = 0.969
anchor_right = 0.227
anchor_bottom = 0.969
margin_left = -115.12
margin_top = -14.79
margin_right = 114.88
margin_bottom = 14.21
custom_fonts/font = SubResource( 4 )
text = "Feito com aux√≠lio do tutorial de: GDQuest."

[node name="Button" type="Button" parent="."]
anchor_left = 0.501
anchor_top = 0.624
anchor_right = 0.501
anchor_bottom = 0.624
margin_left = -46.48
margin_top = -24.28
margin_right = 44.52
margin_bottom = 26.72
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "JOGAR"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
